--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -60,6 +60,7 @@
     <div class="divide"></div>
 
     <h2>Vad har spenderats på min budgetpost?</h2>
+    <div style="padding-top: 15px;">OBS. Räknar ej med fakturor</div>
     <table class="card">
       <thead>
         <tr>
