--- a/templates/admin/pay/overview.html
+++ b/templates/admin/pay/overview.html
@@ -84,27 +84,45 @@
             <table>
                 <tr>
                     <th style="text-align: right;">Mottagare</th>
-                    <td style="color:#000 !important;" v-html="payment.receiver.first_name + ' ' + payment.receiver.last_name"></td>
+                    <td style="color:#000 !important; display: flex; align-items: center">
+                        <div v-html="payment.receiver.first_name + ' ' + payment.receiver.last_name"></div>
+                        <button style="background: none; padding: 4px; box-shadow: none; margin-left: auto" v-on:click="copy(payment.receiver.first_name + ' ' + payment.receiver.last_name)">📋</button>
+                    </td>
                 </tr>
                 <tr>
                     <th style="text-align: right;">Bank</th>
-                    <td style="color:#000 !important;" v-html="payment.receiver.bank_info.bank_name"></td>
+                    <td style="color:#000 !important; display: flex; align-items: center">
+                        <div v-html="payment.receiver.bank_info.bank_name"></div>
+                        <button style="background: none; padding: 4px; box-shadow: none; margin-left: auto" v-on:click="copy(payment.receiver.bank_info.bank_name)">📋</button>
+                    </td>
                 </tr>
                 <tr>
                     <th style="text-align: right;">Clearingnummer</th>
-                    <td style="color:#000 !important;" v-html="payment.receiver.bank_info.sorting_number"></td>
+                    <td style="color:#000 !important; display: flex; align-items: center">
+                        <div v-html="payment.receiver.bank_info.sorting_number"></div>
+                        <button style="background: none; padding: 4px; box-shadow: none; margin-left: auto" v-on:click="copy(payment.receiver.bank_info.sorting_number)">📋</button>
+                    </td>
                 </tr>
                 <tr>
                     <th style="text-align: right;">Kontonummer</th>
-                    <td style="color:#000 !important;" v-html="payment.receiver.bank_info.bank_account"></td>
+                    <td style="color:#000 !important; display: flex; align-items: center">
+                        <div v-html="payment.receiver.bank_info.bank_account"></div>
+                        <button style="background: none; padding: 4px; box-shadow: none; margin-left: auto" v-on:click="copy(payment.receiver.bank_info.bank_account)">📋</button>
+                    </td>
                 </tr>
                 <tr>
                     <th style="text-align: right;">Summa</th>
-                    <td style="color:#000 !important;" v-html="payment.amount"></td>
+                    <td style="color:#000 !important; display: flex; align-items: center">
+                        <div v-html="payment.amount"></div>
+                        <button style="background: none; padding: 4px; box-shadow: none; margin-left: auto" v-on:click="copy(payment.amount)">📋</button>
+                    </td>
                 </tr>
                 <tr>
                     <th style="text-align: right;">Meddelande</th>
-                    <td style="color:#000 !important;" v-html="payment.tag"></td>
+                    <td style="color:#000 !important; display: flex; align-items: center">
+                        <div v-html="payment.tag"></div>
+                        <button style="background: none; padding: 4px; box-shadow: none; margin-left: auto" v-on:click="copy(payment.tag)">📋</button>
+                    </td>
                 </tr>
             </table>
             <br>
@@ -124,7 +142,7 @@
                 invoices: {% autoescape off %}{{ invoices }}{% endautoescape %},
                 accounts: {% autoescape off %}{{ accounts }}{% endautoescape %},
                 account: '{{ user.profile.default_account }}',
-                payment: null
+                payment: null,
             }
         },
         methods: {
@@ -133,7 +151,7 @@
                 if (exps.length < 1) {
                     console.log('Not enough expenses')
                     return
-                } 
+                }
 
                 let form = new FormData()
                 form.append('csrfmiddlewaretoken', '{{ csrf_token }}')
@@ -160,7 +178,8 @@
                     })
                 })
                 if (e) e.preventDefault()
-            }, trim(id, event) {
+            },
+            trim(id, event) {
                 this.expenses = this.expenses.map(e => {
                     if (e.owner == id && (this.committee == false || e.committees.indexOf(this.committee) > -1)) {
                         e.checked = event.target.checked
@@ -168,18 +187,21 @@
                     return e
                 })
                 console.log(this.expenses)
-            }
+            },
+            copy(value) {
+                navigator.clipboard.writeText(value).catch(console.error);
+            },
         },
         created: function() {
             this.committees = Array.from(new Set([].concat.apply([], this.expenses.map(x => x.committees))))
             document.getElementById('cover').style.display = 'flex'
 
-            document.addEventListener('keyup', (e) => { 
+            document.addEventListener('keyup', (e) => {
                 if (event.key === 'Escape' || event.keyCode === 27 || event.key === 'Enter' || event.keyCode === 13) {
                     this.payment = null
                 }
             });
-        }
+        },
     })
 </script>
 {% endblock %}
