--- a/templates/admin/pay/overview.html
+++ b/templates/admin/pay/overview.html
@@ -194,6 +194,7 @@
         },
         created: function() {
             this.committees = Array.from(new Set([].concat.apply([], this.expenses.map(x => x.committees))))
+            this.committees.sort((a, b) => a.localeCompare(b, 'sv-SE'));
             document.getElementById('cover').style.display = 'flex'
 
             document.addEventListener('keyup', (e) => {
