--- a/templates/admin/account/overview.html
+++ b/templates/admin/account/overview.html
@@ -173,6 +173,7 @@
         },
         created: function() {
             this.committees = Array.from(new Set([].concat.apply([], this.expenses.map(x => x.committees))))
+            this.committees.sort((a, b) => a.localeCompare(b, 'sv-SE'));
             console.log(this.expenses)
         }
     })
