--- a/templates/admin/account/overview.html
+++ b/templates/admin/account/overview.html
@@ -11,7 +11,7 @@
     <div class="select" style="float:right">
         <select v-model="committee">
             <option :value="false">Filtrera på nämnd</option>
-            <option v-for="committee in committees" v-text="committee + ' (' + (expenses.filter(x => x.committees.indexOf(committee) > -1).length) + ')'" :value="committee"></option>
+            <option v-for="committee in committees" v-text="committee + ' (' + expenses.filter(x => x.committees.indexOf(committee) > -1).length + ' + ' + invoices.filter(x => x.committees.indexOf(committee) > -1).length + ')'" :value="committee"></option>
         </select>
     </div>
     <h2>Utlägg</h2>
@@ -172,9 +172,11 @@
             }
         },
         created: function() {
-            this.committees = Array.from(new Set([].concat.apply([], this.expenses.map(x => x.committees))))
-            this.committees.sort((a, b) => a.localeCompare(b, 'sv-SE'));
-            console.log(this.expenses)
+            this.committees = Array.from(new Set([
+                ...this.expenses.flatMap(x => x.committees),
+                ...this.invoices.flatMap(x => x.committees),
+            ]))
+            this.committees.sort((a, b) => a.localeCompare(b, 'sv-SE'))
         }
     })
 </script>
